# rust-actix-todo

./: Cargo.toml  Dockerfile  README.md
.cursor/rules/: instructions.mdc
migrations/: 20240408000001_initial.sql
src/: db.rs  main.rs
src/api/: todo.rs
