[package]
name = "rust-actix-todo"
version = "0.1.0"
edition = "2024"
description = "A simple TODO application using Actix-web"

[dependencies]
actix-web = "^4"
actix-cors = "0.7"
dotenv = "^0.15"
sea-orm = { version = "1.1.8", features = ['sqlx-postgres', 'runtime-tokio-rustls', "macros"] }
dotenvy = "^0.15"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.140"
async-std = { version = "^1.10", features = ["attributes", "tokio1"] }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
env_logger = "0.11.8"
log = "0.4.27"
sqlx = { version = "^0.8", features = ["postgres", "runtime-tokio-rustls"] }
include_dir = "0.7.4"
futures = "0.3"
